WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70858
Separate out function linking & exception check data structures.
https://bugs.webkit.org/show_bug.cgi?id=70858
Summary
Separate out function linking & exception check data structures.
Gavin Barraclough
Reported
2011-10-25 15:53:25 PDT
This will make it easier to refactor the callOperation methods to spilt the value representation specific handling from the cpu/calling-convention implementation.
Attachments
Fix
(16.85 KB, patch)
2011-10-25 15:54 PDT
,
Gavin Barraclough
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2011-10-25 15:54:37 PDT
Created
attachment 112417
[details]
Fix
Gavin Barraclough
Comment 2
2011-10-25 16:05:25 PDT
Fixed in
r98405
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug